# crypto-connect

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.template.yaml
dependencies/yaml/: yaml.cpp
examples/cpp/: .gitignore  Makefile  README.md  downloader.cpp  downloader.hpp  filter.cpp  filter.hpp  main.cpp  strategy.cpp  strategy.hpp
examples/cpp/pyhelpers/: .gitignore  cointegration.pyx  requirements.txt  setup.py  stationarity.pyx
include/: build_config.h
include/adapters/: base.hpp
include/adapters/coinbasepro/: adapter.hpp  auth.hpp
include/adapters/coinbasepro/rest/: bars_scheduler.hpp  connector.hpp
include/adapters/coinbasepro/stream/: connector.hpp  handler.hpp
include/cryptoconnect/: build_config.h  strategy.hpp
include/cryptoconnect/adapters/: base.hpp  coinbasepro.hpp
include/cryptoconnect/adapters/coinbasepro/: adapter.hpp  auth.hpp
include/cryptoconnect/adapters/coinbasepro/rest/: bars_scheduler.hpp  connector.hpp
include/cryptoconnect/adapters/coinbasepro/stream/: connector.hpp  handler.hpp
include/cryptoconnect/helpers/network/http/: session.hpp
include/cryptoconnect/helpers/utils/: base64.hpp  exceptions.hpp
include/cryptoconnect/structs/: event_queue.hpp  events.hpp  orders.hpp  products.hpp  universe.hpp
include/helpers/network/websockets/: client.hpp
include/helpers/utils/: cryptography.hpp  datetime.hpp
include/strategies/: base.hpp
include/structs/: events.hpp  orders.hpp  products.hpp  universe.hpp
src/adapters/: base.cpp
src/adapters/coinbasepro/: adapter.cpp  auth.cpp
src/adapters/coinbasepro/rest/: bars_scheduler.cpp  connector.cpp
src/adapters/coinbasepro/stream/: connector.cpp  handler.cpp
src/helpers/network/http/: session.cpp
src/helpers/network/websockets/: client.cpp
